Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8162

func_str crashes on SELECT AES_DECRYPT(AES_ENCRYPT(...)) on line 107

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • N/A
    • 10.1.5
    • Encryption
    • None

    Description

      main.func_str                            [ fail ]
              Test ended at 2015-05-14 12:04:22
       
      CURRENT_TEST: main.func_str
      mysqltest: At line 107: query 'select aes_decrypt(aes_encrypt("","a"),"a")' failed: 2013: Lost connection to MySQL server during query
       
      The result from queries just before the failure was:
      < snip >
      abc
      select aes_decrypt(aes_encrypt('abc','1'),1);
      aes_decrypt(aes_encrypt('abc','1'),1)
      abc
      select aes_encrypt(NULL,"a");
      aes_encrypt(NULL,"a")
      NULL
      select aes_encrypt("a",NULL);
      aes_encrypt("a",NULL)
      NULL
      select aes_decrypt(NULL,"a");
      aes_decrypt(NULL,"a")
      NULL
      select aes_decrypt("a",NULL);
      aes_decrypt("a",NULL)
      NULL
      select aes_decrypt("a","a");
      aes_decrypt("a","a")
      NULL
      select aes_decrypt(aes_encrypt("","a"),"a");
       
      More results from queries before failure can be found in /dev/shm/var_auto_537H/log/func_str.log
       
       
      Server [mysqld.1 - pid: 32675, winpid: 32675, exit: 256] failed during test run
      Server log from this test:
      ----------SERVER LOG START-----------
      150514 12:04:21 [Note] Plugin 'SEQUENCE' is disabled.
      150514 12:04:21 [Note] Plugin 'partition' is disabled.
      150514 12:04:21 [Note] Plugin 'InnoDB' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_DATAFILES' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_TABLESTATS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_INDEXES' is disabled.
      150514 12:04:21 [Note] Plugin 'XTRADB_RSEG' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CMP_PER_INDEX' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_TRX' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_FT_DELETED' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_FT_BEING_DELETED' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_LOCK_WAITS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_LOCKS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_TABLESPACES_ENCRYPTION' is disabled.
      150514 12:04:21 [Note] Plugin 'XTRADB_INTERNAL_HASH_TABLES' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_FIELDS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CMPMEM_RESET' is disabled.
      150514 12:04:21 [Note] Plugin 'FEEDBACK' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CMP' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_FT_INDEX_TABLE' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_TABLESPACES' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_MUTEXES' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_BUFFER_PAGE_LRU' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_FOREIGN_COLS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CMP_RESET' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_BUFFER_POOL_STATS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_FT_INDEX_CACHE' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_FOREIGN' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_METRICS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_FT_DEFAULT_STOPWORD' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CMPMEM' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_TABLES' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_COLUMNS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_FT_CONFIG' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_BUFFER_PAGE' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CMP_PER_INDEX_RESET' is disabled.
      150514 12:04:21 [Note] Plugin 'XTRADB_READ_VIEW' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_SYS_SEMAPHORE_WAITS' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_CHANGED_PAGES' is disabled.
      150514 12:04:21 [Note] Plugin 'INNODB_TABLESPACES_SCRUBBING' is disabled.
      150514 12:04:21 [Note] Server socket created on IP: '::'.
      150514 12:04:21 [Note] Event Scheduler: Loaded 0 events
      150514 12:04:21 [Note] WSREP: Read nil XID from storage engines, skipping position init
      150514 12:04:21 [Note] WSREP: wsrep_load(): loading provider library 'none'
      150514 12:04:21 [Note] /media/DATA/maria-git/server/sql/mysqld: ready for connections.
      Version: '10.1.5-MariaDB-wsrep-debug-log'  socket: '/dev/shm/var_auto_537H/tmp/mysqld.1.sock'  port: 12460  Source distribution, wsrep_25.10.r4144
      mysqld: /home/bar/maria-git/server/mysys_ssl/my_crypt.cc:74: int block_crypt(CipherMode, Dir, const uchar*, uint, uchar*, uint*, const KeyByte*, uint, const KeyByte*, uint, int): Assertion `source_length' failed.
      150514 12:04:21 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see http://kb.askmonty.org/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.1.5-MariaDB-wsrep-debug-log
      key_buffer_size=1048576
      read_buffer_size=131072
      max_used_connections=1
      max_threads=153
      thread_count=1
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 63098 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0x7fd39b128f70
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7fd390295d40 thread_stack 0x48000
      mysys/stacktrace.c:246(my_print_stacktrace)[0x7fd399615572]
      sql/signal_handler.cc:155(handle_fatal_signal)[0x7fd398fc5d66]
      /lib64/libpthread.so.0(+0x37c780f000)[0x7fd3984ad000]
      /lib64/libc.so.6(gsignal+0x35)[0x7fd396446c55]
      /lib64/libc.so.6(abort+0x148)[0x7fd396448408]
      /lib64/libc.so.6(+0x37c702e972)[0x7fd39643f972]
      /lib64/libc.so.6(+0x37c702ea22)[0x7fd39643fa22]
      mysys_ssl/my_crypt.cc:76(block_crypt)[0x7fd399631ef4]
      mysys_ssl/my_crypt.cc:218(my_aes_encrypt_ecb)[0x7fd3996325ef]
      sql/item_strfunc.cc:404(Item_aes_crypt::val_str(String*))[0x7fd399052179]
      sql/item_strfunc.cc:390(Item_aes_crypt::val_str(String*))[0x7fd39905201b]
      sql/item.cc:6359(Item::send(Protocol*, String*))[0x7fd398fea37f]
      sql/protocol.cc:906(Protocol::send_result_set_row(List<Item>*))[0x7fd398ce30f4]
      sql/sql_class.cc:2739(select_send::send_data(List<Item>&))[0x7fd398d5929d]
      sql/sql_select.cc:2473(JOIN::exec_inner())[0x7fd398dd8072]
      sql/sql_select.cc:2398(JOIN::exec())[0x7fd398dd7b01]
      sql/sql_select.cc:3328(mysql_select(THD*, Item***, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x7fd398ddb0da]
      sql/sql_select.cc:373(handle_select(THD*, LEX*, select_result*, unsigned long))[0x7fd398dd1180]
      sql/sql_parse.cc:5785(execute_sqlcom_select)[0x7fd398da1e6e]
      sql/sql_parse.cc:2926(mysql_execute_command(THD*))[0x7fd398d980be]
      sql/sql_parse.cc:7161(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x7fd398da54ca]
      sql/sql_parse.cc:1464(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x7fd398d94289]
      sql/sql_parse.cc:1090(do_command(THD*))[0x7fd398d92fb1]
      sql/sql_connect.cc:1347(do_handle_one_connection(THD*))[0x7fd398ec516c]
      sql/sql_connect.cc:1259(handle_one_connection)[0x7fd398ec4e84]
      perfschema/pfs.cc:1862(pfs_spawn_thread)[0x7fd39926d1b6]
      /lib64/libpthread.so.0(+0x37c7807d15)[0x7fd3984a5d15]
      /lib64/libc.so.6(clone+0x6d)[0x7fd39650353d]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7fd380013ae8): select aes_decrypt(aes_encrypt("","a"),"a")
      Connection ID (thread ID): 3
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on
       
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      Writing a core file
      ----------SERVER LOG END-------------
       
       
       - saving '/dev/shm/var_auto_537H/log/main.func_str/' to '/dev/shm/var_auto_537H/log/main.func_str/'
       - found 'core.32676' (0/5)
       
      Trying 'dbx' to get a backtrace
       
      Trying 'gdb' to get a backtrace
      Core generated by '/media/DATA/maria-git/server/sql/mysqld'
      Output from gdb follows. The first stack trace is from the failing thread.
      The following stack traces are from all threads (so the failing one is
      duplicated).
      --------------------------
      [New LWP 333]
      [New LWP 32711]
      [New LWP 32727]
      [New LWP 32721]
      [New LWP 32676]
      [Thread debugging using libthread_db enabled]
      Using host libthread_db library "/lib64/libthread_db.so.1".
      Core was generated by `/media/DATA/maria-git/server/sql/mysqld --defaults-group-suffix=.1 --defaults-f'.
      Program terminated with signal 6, Aborted.
      #0  0x00007fd3984aa65c in pthread_kill () from /lib64/libpthread.so.0
      #0  0x00007fd3984aa65c in pthread_kill () from /lib64/libpthread.so.0
      #1  0x00007fd39961565e in my_write_core (sig=6) at /home/bar/maria-git/server/mysys/stacktrace.c:456
      #2  0x00007fd398fc608a in handle_fatal_signal (sig=6) at /home/bar/maria-git/server/sql/signal_handler.cc:266
      #3  <signal handler called>
      #4  0x00007fd396446c55 in raise () from /lib64/libc.so.6
      #5  0x00007fd396448408 in abort () from /lib64/libc.so.6
      #6  0x00007fd39643f972 in __assert_fail_base () from /lib64/libc.so.6
      #7  0x00007fd39643fa22 in __assert_fail () from /lib64/libc.so.6
      #8  0x00007fd399631ef4 in block_crypt (cipher=0x7fd39758d580, dir=1, source=0x7fd380013bd8 "", source_length=0, dest=0x7fd3800aefc0 "", dest_length=0x7fd39029366c, key=0x7fd390293680 "a", key_length=16, iv=0x0, iv_length=0, no_padding=0) at /home/bar/maria-git/server/mysys_ssl/my_crypt.cc:74
      #9  0x00007fd3996325ef in my_aes_encrypt_ecb (source=0x7fd380013bd8 "", source_length=0, dest=0x7fd3800aefc0 "", dest_length=0x7fd39029366c, key=0x7fd390293680 "a", key_length=16, iv=0x0, iv_length=0, no_padding=0) at /home/bar/maria-git/server/mysys_ssl/my_crypt.cc:217
      #10 0x00007fd399052179 in Item_aes_crypt::val_str (this=0x7fd380013d50, str=0x7fd390293940) at /home/bar/maria-git/server/sql/item_strfunc.cc:406
      #11 0x00007fd39905201b in Item_aes_crypt::val_str (this=0x7fd380013f38, str=0x7fd390293940) at /home/bar/maria-git/server/sql/item_strfunc.cc:390
      #12 0x00007fd398fea37f in Item::send (this=0x7fd380013f38, protocol=0x7fd39b129500, buffer=0x7fd390293940) at /home/bar/maria-git/server/sql/item.cc:6359
      #13 0x00007fd398ce30f4 in Protocol::send_result_set_row (this=0x7fd39b129500, row_items=0x7fd39b12d4f8) at /home/bar/maria-git/server/sql/protocol.cc:906
      #14 0x00007fd398d5929d in select_send::send_data (this=0x7fd380014110, items=...) at /home/bar/maria-git/server/sql/sql_class.cc:2739
      #15 0x00007fd398dd8072 in JOIN::exec_inner (this=0x7fd380014130) at /home/bar/maria-git/server/sql/sql_select.cc:2475
      #16 0x00007fd398dd7b01 in JOIN::exec (this=0x7fd380014130) at /home/bar/maria-git/server/sql/sql_select.cc:2397
      #17 0x00007fd398ddb0da in mysql_select (thd=0x7fd39b128f70, rref_pointer_array=0x7fd39b12d658, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7fd380014110, unit=0x7fd39b12ccf0, select_lex=0x7fd39b12d3e0) at /home/bar/maria-git/server/sql/sql_select.cc:3326
      #18 0x00007fd398dd1180 in handle_select (thd=0x7fd39b128f70, lex=0x7fd39b12cc28, result=0x7fd380014110, setup_tables_done_option=0) at /home/bar/maria-git/server/sql/sql_select.cc:373
      #19 0x00007fd398da1e6e in execute_sqlcom_select (thd=0x7fd39b128f70, all_tables=0x0) at /home/bar/maria-git/server/sql/sql_parse.cc:5785
      #20 0x00007fd398d980be in mysql_execute_command (thd=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_parse.cc:2926
      #21 0x00007fd398da54ca in mysql_parse (thd=0x7fd39b128f70, rawbuf=0x7fd380013ae8 "select aes_decrypt(aes_encrypt(\"\",\"a\"),\"a\")", length=43, parser_state=0x7fd390295110) at /home/bar/maria-git/server/sql/sql_parse.cc:7161
      #22 0x00007fd398d94289 in dispatch_command (command=COM_QUERY, thd=0x7fd39b128f70, packet=0x7fd39b12f861 "", packet_length=43) at /home/bar/maria-git/server/sql/sql_parse.cc:1462
      #23 0x00007fd398d92fb1 in do_command (thd=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_parse.cc:1090
      #24 0x00007fd398ec516c in do_handle_one_connection (thd_arg=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_connect.cc:1347
      #25 0x00007fd398ec4e84 in handle_one_connection (arg=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_connect.cc:1258
      #26 0x00007fd39926d1b6 in pfs_spawn_thread (arg=0x7fd39b134b40) at /home/bar/maria-git/server/storage/perfschema/pfs.cc:1860
      #27 0x00007fd3984a5d15 in start_thread () from /lib64/libpthread.so.0
      #28 0x00007fd39650353d in clone () from /lib64/libc.so.6
       
      Thread 5 (Thread 0x7fd39889f800 (LWP 32676)):
      #0  0x00007fd3964faa5d in poll () from /lib64/libc.so.6
      #1  0x00007fd398cd385e in handle_connections_sockets () at /home/bar/maria-git/server/sql/mysqld.cc:6367
      #2  0x00007fd398cd27b3 in mysqld_main (argc=124, argv=0x7fd39ae3f810) at /home/bar/maria-git/server/sql/mysqld.cc:5795
      #3  0x00007fd398cc7ee0 in main (argc=6, argv=0x7fff94cc5a48) at /home/bar/maria-git/server/sql/main.cc:25
       
      Thread 4 (Thread 0x7fd38b85a700 (LWP 32721)):
      #0  0x00007fd3984a9952 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x00007fd39961aefd in safe_cond_timedwait (cond=0x7fd39a8c9780 <COND_checkpoint>, mp=0x7fd39a8c96c0 <LOCK_checkpoint>, abstime=0x7fd38b859ce0, file=0x7fd39982fc90 "/home/bar/maria-git/server/include/mysql/psi/mysql_thread.h", line=1191) at /home/bar/maria-git/server/mysys/thr_mutex.c:547
      #2  0x00007fd3991aee91 in inline_mysql_cond_timedwait (that=0x7fd39a8c9780 <COND_checkpoint>, mutex=0x7fd39a8c96c0 <LOCK_checkpoint>, abstime=0x7fd38b859ce0, src_file=0x7fd39982fcd0 "/home/bar/maria-git/server/storage/maria/ma_servicethread.c", src_line=119) at /home/bar/maria-git/server/include/mysql/psi/mysql_thread.h:1191
      #3  0x00007fd3991af38c in my_service_thread_sleep (control=0x7fd399eddb90 <checkpoint_control>, sleep_time=29000000000) at /home/bar/maria-git/server/storage/maria/ma_servicethread.c:118
      #4  0x00007fd3991a3f0e in ma_checkpoint_background (arg=0x1e) at /home/bar/maria-git/server/storage/maria/ma_checkpoint.c:709
      #5  0x00007fd39926d1b6 in pfs_spawn_thread (arg=0x7fd39b023570) at /home/bar/maria-git/server/storage/perfschema/pfs.cc:1860
      #6  0x00007fd3984a5d15 in start_thread () from /lib64/libpthread.so.0
      #7  0x00007fd39650353d in clone () from /lib64/libc.so.6
       
      Thread 3 (Thread 0x7fd3902df700 (LWP 32727)):
      #0  0x00007fd3984acd90 in sigwait () from /lib64/libpthread.so.0
      #1  0x00007fd398cce2cb in signal_hand (arg=0x0) at /home/bar/maria-git/server/sql/mysqld.cc:3441
      #2  0x00007fd39926d1b6 in pfs_spawn_thread (arg=0x7fd39b065f20) at /home/bar/maria-git/server/storage/perfschema/pfs.cc:1860
      #3  0x00007fd3984a5d15 in start_thread () from /lib64/libpthread.so.0
      #4  0x00007fd39650353d in clone () from /lib64/libc.so.6
       
      Thread 2 (Thread 0x7fd390e73700 (LWP 32711)):
      #0  0x00007fd3984a9952 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
      #1  0x00007fd39961aefd in safe_cond_timedwait (cond=0x7fd39a911260 <COND_timer>, mp=0x7fd39a9111a0 <LOCK_timer>, abstime=0x7fd390e72d80, file=0x7fd399944c20 "/home/bar/maria-git/server/include/mysql/psi/mysql_thread.h", line=1191) at /home/bar/maria-git/server/mysys/thr_mutex.c:547
      #2  0x00007fd39961be2e in inline_mysql_cond_timedwait (that=0x7fd39a911260 <COND_timer>, mutex=0x7fd39a9111a0 <LOCK_timer>, abstime=0x7fd390e72d80, src_file=0x7fd399944c60 "/home/bar/maria-git/server/mysys/thr_timer.c", src_line=292) at /home/bar/maria-git/server/include/mysql/psi/mysql_thread.h:1191
      #3  0x00007fd39961c954 in timer_handler (arg=0x0) at /home/bar/maria-git/server/mysys/thr_timer.c:292
      #4  0x00007fd39926d1b6 in pfs_spawn_thread (arg=0x7fd39af4d2a0) at /home/bar/maria-git/server/storage/perfschema/pfs.cc:1860
      #5  0x00007fd3984a5d15 in start_thread () from /lib64/libpthread.so.0
      #6  0x00007fd39650353d in clone () from /lib64/libc.so.6
       
      Thread 1 (Thread 0x7fd390296700 (LWP 333)):
      #0  0x00007fd3984aa65c in pthread_kill () from /lib64/libpthread.so.0
      #1  0x00007fd39961565e in my_write_core (sig=6) at /home/bar/maria-git/server/mysys/stacktrace.c:456
      #2  0x00007fd398fc608a in handle_fatal_signal (sig=6) at /home/bar/maria-git/server/sql/signal_handler.cc:266
      #3  <signal handler called>
      #4  0x00007fd396446c55 in raise () from /lib64/libc.so.6
      #5  0x00007fd396448408 in abort () from /lib64/libc.so.6
      #6  0x00007fd39643f972 in __assert_fail_base () from /lib64/libc.so.6
      #7  0x00007fd39643fa22 in __assert_fail () from /lib64/libc.so.6
      #8  0x00007fd399631ef4 in block_crypt (cipher=0x7fd39758d580, dir=1, source=0x7fd380013bd8 "", source_length=0, dest=0x7fd3800aefc0 "", dest_length=0x7fd39029366c, key=0x7fd390293680 "a", key_length=16, iv=0x0, iv_length=0, no_padding=0) at /home/bar/maria-git/server/mysys_ssl/my_crypt.cc:74
      #9  0x00007fd3996325ef in my_aes_encrypt_ecb (source=0x7fd380013bd8 "", source_length=0, dest=0x7fd3800aefc0 "", dest_length=0x7fd39029366c, key=0x7fd390293680 "a", key_length=16, iv=0x0, iv_length=0, no_padding=0) at /home/bar/maria-git/server/mysys_ssl/my_crypt.cc:217
      #10 0x00007fd399052179 in Item_aes_crypt::val_str (this=0x7fd380013d50, str=0x7fd390293940) at /home/bar/maria-git/server/sql/item_strfunc.cc:406
      #11 0x00007fd39905201b in Item_aes_crypt::val_str (this=0x7fd380013f38, str=0x7fd390293940) at /home/bar/maria-git/server/sql/item_strfunc.cc:390
      #12 0x00007fd398fea37f in Item::send (this=0x7fd380013f38, protocol=0x7fd39b129500, buffer=0x7fd390293940) at /home/bar/maria-git/server/sql/item.cc:6359
      #13 0x00007fd398ce30f4 in Protocol::send_result_set_row (this=0x7fd39b129500, row_items=0x7fd39b12d4f8) at /home/bar/maria-git/server/sql/protocol.cc:906
      #14 0x00007fd398d5929d in select_send::send_data (this=0x7fd380014110, items=...) at /home/bar/maria-git/server/sql/sql_class.cc:2739
      #15 0x00007fd398dd8072 in JOIN::exec_inner (this=0x7fd380014130) at /home/bar/maria-git/server/sql/sql_select.cc:2475
      #16 0x00007fd398dd7b01 in JOIN::exec (this=0x7fd380014130) at /home/bar/maria-git/server/sql/sql_select.cc:2397
      #17 0x00007fd398ddb0da in mysql_select (thd=0x7fd39b128f70, rref_pointer_array=0x7fd39b12d658, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7fd380014110, unit=0x7fd39b12ccf0, select_lex=0x7fd39b12d3e0) at /home/bar/maria-git/server/sql/sql_select.cc:3326
      #18 0x00007fd398dd1180 in handle_select (thd=0x7fd39b128f70, lex=0x7fd39b12cc28, result=0x7fd380014110, setup_tables_done_option=0) at /home/bar/maria-git/server/sql/sql_select.cc:373
      #19 0x00007fd398da1e6e in execute_sqlcom_select (thd=0x7fd39b128f70, all_tables=0x0) at /home/bar/maria-git/server/sql/sql_parse.cc:5785
      #20 0x00007fd398d980be in mysql_execute_command (thd=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_parse.cc:2926
      #21 0x00007fd398da54ca in mysql_parse (thd=0x7fd39b128f70, rawbuf=0x7fd380013ae8 "select aes_decrypt(aes_encrypt(\"\",\"a\"),\"a\")", length=43, parser_state=0x7fd390295110) at /home/bar/maria-git/server/sql/sql_parse.cc:7161
      #22 0x00007fd398d94289 in dispatch_command (command=COM_QUERY, thd=0x7fd39b128f70, packet=0x7fd39b12f861 "", packet_length=43) at /home/bar/maria-git/server/sql/sql_parse.cc:1462
      #23 0x00007fd398d92fb1 in do_command (thd=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_parse.cc:1090
      #24 0x00007fd398ec516c in do_handle_one_connection (thd_arg=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_connect.cc:1347
      #25 0x00007fd398ec4e84 in handle_one_connection (arg=0x7fd39b128f70) at /home/bar/maria-git/server/sql/sql_connect.cc:1258
      #26 0x00007fd39926d1b6 in pfs_spawn_thread (arg=0x7fd39b134b40) at /home/bar/maria-git/server/storage/perfschema/pfs.cc:1860
      #27 0x00007fd3984a5d15 in start_thread () from /lib64/libpthread.so.0
      #28 0x00007fd39650353d in clone () from /lib64/libc.so.6
       
      --------------------------------------------------------------------------
      The servers were restarted 0 times
      Spent 0.000 of 13 seconds executing testcases
       
      Failure: Failed 1/1 tests, 0.00% were successful.
       
      Failing test(s): main.func_str

      Attachments

        Activity

          People

            serg Sergei Golubchik
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.